re PR tree-optimization/44507 (vectorization ANDs array elements together incorrectly)

PR tree-optimization/44507 
	* tree-vect-loop.c (get_initial_def_for_reduction): Use -1
	to build initial vector for BIT_AND_EXPR.
	* tree-vect-slp.c (vect_get_constant_vectors): Likewise.

From-SVN: r160727